--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -4,6 +4,9 @@
     <div ng-include="'intro/index.tpl.html'"></div>
     <div id="home-content">
 
+    	<img src="/images/crowd.jpg"/>
+    	<img src="/images/crowd1.jpg"/>
+
     	<p>the internet's voice</p>
     	<p>popular voice, bylaw creation</p>
     	<p>crowd-sourced government</p>
