--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -4,7 +4,15 @@
     <div ng-include="'intro/index.tpl.html'"></div>
     <div id="home-content">
 
-    	<img src="/images/crowd.jpg"/>
+        <img src="/images/capitol.jpg"/>
+
+        <div>
+    	   <img src="/images/crowd.jpg"/>
+        </div>
+
+        <div style="height:500px;background-color:purple"></div>
+
+
     	<img src="/images/crowd1.jpg"/>
 
     	<p>the internet's voice</p>
