--- a/.tmp/public/src/app/sidebar/index.tpl.html
+++ b/.tmp/public/src/app/sidebar/index.tpl.html
@@ -5,7 +5,9 @@
             <a href="/">
                 <div class="list-item">
                     <div class="nav-small-list">
-                        <img style="max-width: 50%;" src="/images/tri.png"/>
+                        <!--<img style="max-width: 50%;" src="/images/tri.png"/>-->
+                        <div class="nav-small-list"><i style="color:#fff" class="fa fa-check"></i></div>
+
                     </div>
                     <div class="nav-large-list">voetr</div>
                 </div>
@@ -30,8 +32,16 @@
         <div class="item-container">
             <a href="/committee/">
                 <div class="list-item">
-                    <div class="nav-small-list"><i class="fa fa-th"></i></div>
+                    <div class="nav-small-list"><i class="fa fa-users"></i></div>
                     <div class="nav-large-list">committee</div>
+                </div>
+            </a>
+        </div>
+        <div class="item-container">
+            <a href="/register/">
+                <div class="list-item">
+                    <div class="nav-small-list"><i class="fa fa-hand-peace-o"></i></div>
+                    <div class="nav-large-list">register</div>
                 </div>
             </a>
         </div>
