--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -19,6 +19,12 @@
     	<p>popular voice, bylaw creation</p>
     	<p>crowd-sourced government</p>
 
+        <br><br>
+
+        <p>numbers and stats infographic</p>
+        <p>local counties / self governing committees / total members / search / political info</p>
+
+
     </div>
     <!--/if not logged in-->
 
