--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -1,11 +1,28 @@
 <h1>member name</h1>
 
+
+<img style="height:260px;" src="/images/obama.jpg"/>
+
 <div>
-	following / followers
+	following
+</div>
+
+<div>
+	followers
+</div>
+
 <div>
 	committees
 </div>
 
 <div>
 	activity list
+</div>
+
+<div>
+	votes
+</div>
+
+<div>
+	posts
 </div>
