--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -47,6 +47,7 @@
     <script src="/bower_components/angular-scroll/angular-scroll.js"></script>
     <script src="/src/app/about/index.js"></script>
     <script src="/src/app/app.js"></script>
+    <script src="/src/app/auth/index.js"></script>
     <script src="/src/app/committee/index.js"></script>
     <script src="/src/app/committees/index.js"></script>
     <script src="/src/app/home/index.js"></script>
