--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -35,6 +35,15 @@
 
             <h1>trending</h1>
 
+            <a href="/committee/united-states">united states</a>
+            <a href="/committee/tennessee">tennessee</a>
+            <a href="/committee/republican">Republican National Committee</a>
+            <a href="/committee/democratic">Democratic National Committee</a>
+
+
+
+            <a href="/committee/united-states/member/troverman">troverman</A>
+
         </div>
 
         <p>numbers and stats infographic</p>
