--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -14,21 +14,21 @@
 <div class="about-container">
 
 
-
-
 	<div>
 		
 		<h2>the voice of the internet</h2>
 
+		<p>direct input on policy</p>
+		<!-- my voice is filtered though 'representatives' that have a skewed agenda - money -->
+
 		<p>real time voting</p>
 		<p>bylaw generation</p>
-		<p>view all politicians</p>
-		<p>political social network
-		<p>have your voice be heard</p>
-		<p>collective decision making</p>
+		<p>a political social network
+		<p>have your voice be heard through collective decision making</p>
 
 		<p>we believe in a free and open internet</p>
 		<p>we believe in direct democracy</p>
+		<!-- mandatory voting -->
 	
 	</div>
 
