--- a/.tmp/public/src/app/member/index.tpl.html
+++ b/.tmp/public/src/app/member/index.tpl.html
@@ -1,29 +1,181 @@
-<h1>member name</h1>
+<style>
+	@import url(http://fonts.googleapis.com/css?family=Quicksand:300,400|Lato:400,300|Coda|Open+Sans);
+
+	.content-profile-page {
+	  margin: 1em auto;
+	  width: 44.23em;
+	}
+
+	.card {
+	  background: #fff;
+	  border-radius: 0.3rem;
+	  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+	  border: .1em solid rgba(0, 0, 0, 0.2);
+	  margin-bottom: 1em;
+	}
+
+	.profile-user-page .img-user-profile {
+	  margin: 0 auto;
+	  text-align: center;
+	}
+
+	.profile-user-page .img-user-profile .profile-bgHome {
+	  border-bottom: .2em solid #f5f5f5;
+	  width: 44.23em;
+	  height: 16em;
+	}
+
+	.profile-user-page .img-user-profile .avatar {
+	  margin: 0 auto;
+	  background: #fff;
+	  width: 7em;
+	  height: 7em;
+	  padding: 0.25em;
+	  border-radius: .4em;
+	  margin-top: -10em;
+	  box-shadow: 0 0 .1em rgba(0, 0, 0, 0.35);
+	}
+
+	.profile-user-page .user-profile-data,
+	.profile-user-page .description-profile {
+	  text-align: center;
+	  padding: 0 1.5em;
+	}
+
+	.profile-user-page .user-profile-data h1 {
+	  font-family: "Lato", sans-serif;
+	  margin-top: 0.35em;
+	  color: #292f33;
+	  margin-bottom: 0;
+	}
+
+	.profile-user-page .user-profile-data p {
+	  font-family: "Lato", sans-serif;
+	  color: #8899a6;
+	  font-size: 1.1em;
+	  margin-top: 0;
+	  margin-bottom: 0.5em;
+	}
+
+	.profile-user-page .description-profile {
+	  color: #75787b;
+	  font-size: 0.98em;
+	}
+
+	.profile-user-page .data-user {
+	  font-family: "Quicksand", sans-serif;
+	  margin-bottom: 0;
+	  cursor: pointer;
+	  padding: 0;
+	  list-style: none;
+	  display: table;
+	  width: 100.15%;
+	}
+
+	.profile-user-page .data-user li {
+	  margin: 0;
+	  padding: 0;
+	  width: 33.33334%;
+	  display: table-cell;
+	  text-align: center;
+	  border-left: 0.1em solid transparent;
+	}
+
+	.profile-user-page .data-user li:first-child {
+	  border-left: 0;
+	}
+
+	.profile-user-page .data-user li:first-child a {
+	  border-bottom-left-radius: 0.3rem;
+	}
+
+	.profile-user-page .data-user li:last-child a {
+	  border-bottom-right-radius: 0.3rem;
+	}
+
+	.profile-user-page .data-user li a,
+	.profile-user-page .data-user li strong {
+	  display: block;
+	}
+
+	.profile-user-page .data-user li a {
+	  background-color: #f7f7f7;
+	  border-top: 1px solid rgba(242, 242, 242, 0.5);
+	  border-bottom: .2em solid #f7f7f7;
+	  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(255, 255, 255, 0.4);
+	  padding: .93em 0;
+	  color: #46494c;
+	}
+
+	.profile-user-page .data-user li a strong,
+	.profile-user-page .data-user li a span {
+	  font-weight: 600;
+	  line-height: 1;
+	}
+
+	.profile-user-page .data-user li a strong {
+	  font-size: 2em;
+	}
+
+	.profile-user-page .data-user li a span {
+	  color: #717a7e;
+	}
+
+	.profile-user-page .data-user li a:hover {
+	  background: rgba(0, 0, 0, 0.05);
+	  border-bottom: .2em solid #3498db;
+	  color: #3498db;
+	}
+
+	.profile-user-page .data-user li a:hover span {
+	  color: #3498db;
+	}
+
+	footer h4 {
+	  display: block;
+	  text-align: center;
+	  clear: both;
+	  font-family: "Coda", sans-serif;
+	  color: #566965;
+	  line-height: 6;
+	  font-size: 1em;
+	}
+	#profile-activity{text-align:center;}
+</style>
 
 
-<img style="height:260px;" src="/images/obama.jpg"/>
-
-<div>
-	following
+<div class="content-profile-page">
+  <div class="profile-user-page card">
+    <div class="img-user-profile">
+      <img class="profile-bgHome" src="/images/crowd1.jpg" />
+      <img class="avatar" src="/images/trevor.jpg"/>
+    </div>
+    <div class="user-profile-data">
+      <h1>Trevor Overman</h1>
+    </div>
+    <ul class="data-user">
+   	  <li><a><strong>888</strong><span>Committees</span></a></li>
+      <li><a><strong>888</strong><span>Votes</span></a></li>
+      <li><a><strong>888</strong><span>Posts</span></a></li>
+      <!--<li><a><strong>888</strong><span>Bills</span></a></li>-->
+      <li><a><strong>888</strong><span>Followers</span></a></li>
+      <li><a><strong>888</strong><span>Following</span></a></li>
+    </ul>
+  </div>
 </div>
 
-<div>
-	followers
-</div>
+<div id="profile-activity">
+	<p>Trevor voted Yes on <a>hr-888</a> - <a>united states senate</a></p>
+	<p>Trevor voted Yes on <a>hr-888</a> - <a>united states senate</a></p>
+	<p>Trevor voted Yes on <a>hr-888</a> - <a>united states senate</a></p>
+	<p>Trevor voted Yes on <a>hr-888</a> - <a>united states senate</a></p>
+	<p>Trevor voted Yes on <a>hr-888</a> - <a>united states senate</a></p>
+	<p>Trevor voted Yes on <a>hr-888</a> - <a>united states senate</a></p>
+	<p>Trevor voted Yes on <a>hr-888</a> - <a>united states senate</a></p>
+	<p>Trevor submitted <a>hr-888</a> to the <a>united states senate</a></p>
+	<p>Trevor suggested an edit to <a>hr-888</a> - <a>united states senate</a></p>
 
-<div>
-	committees
-</div>
 
-<div>
-	votes
-</div>
-
-<div>
-	posts
-</div>
-
-<div>
 	<p>activity</p>
 	<p>activity</p>
 	<p>activity</p>
