--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -4,51 +4,119 @@
     <!--/if logged in-->
 
 	<!--if not logged in-->
+    <style>
+        .img-fill {
+          width: 100%;
+          display: block;
+          overflow: hidden;
+          position: relative;
+          text-align: center
+        }
+
+        .img-fill img {
+          height: 100%;
+          min-width: 100%;
+          position: relative;
+          display: inline-block;
+          max-width: none
+        }
+
+        .heading-container{
+          position:relative;
+        }
+
+        .heading-container .img-fill {
+          height: 100vh;
+          background:#000;
+        }
+
+        .heading-container .img-fill:before {
+          content: '';
+          display: block;
+          width:100%;
+          height:100%;
+          top:0px;
+          left:0px;
+          z-index:2;
+          background:rgba(0,0,0,.50);
+          position: absolute;
+        }
+
+        .heading-container .img-fill img{
+            -webkit-filter: blur(3px);
+        }
+
+        .heading-container .img-fill .info {
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          width: 100%;
+          z-index:3;
+          top:30%;
+          padding:0 20px;
+        }
+
+        .heading-container .img-fill h3{
+          font-family:Jura;
+          color:#FFF;
+          margin:auto;
+          white-space:nowrap;
+          //text-align:center;
+          text-overflow:ellipsis;
+          overflow:hidden;
+        }
+
+        .heading-container .img-fill p{
+          max-width:650px;
+          //margin:auto;
+          margin-top:15px;
+          font-family:Jura;
+          color:#FFF;
+          text-align:justify;
+          overflow:hidden;
+        }
+
+    </style>
     <div ng-include="'intro/index.tpl.html'"></div>
+    <div class="heading-container">
+        <div class="img-fill">
+            <img src="/images/congress.jpg" alt="">
+            <div class="info">
+                <h3>Empowering the internet</h3>
+                <p>vote and have your voice heard, come together with the collective power of the internet</p>
+            </div>
+        </div>
+    </div>  
     <div id="home-content">
 
-        <div>
-    	   <img src="/images/crowd.jpg"/>
-        </div>
-
-        <div style="height:500px;background-color:rgb(220,245,223)">
+        <div style="height:500px;background-color:#f1f0ed;text-align:center">
             <i style="font-size:256px;" class="fa fa-bullhorn"></i>
+            <p>the internet's voice</p>
+            <p>a decision making cloud</p>
+            <p>be part of the movement</p>
+            <p>bylaw creation, crowd-sourced government</p>
         </div>
 
-
-    	<img src="/images/crowd1.jpg"/>
-
         <div>
-
+            <img src="/images/crowd1.jpg"/>
             enter your zipcode
-
         <div>
 
-    	<p>the internet's voice</p>
-        <p>a decision making cloud</p>
-        <p>be part of the movement</p>
-    	<p>bylaw creation, crowd-sourced government</p>
-
-        <br><br>
-
-        <div style="height:500px;background-color:rgb(220,245,223)">
-
+        <div style="height:500px;background-color:#fff;text-align:center">
             <h1>trending</h1>
-
-            <a href="/committee/united-states">united states</a>
-            <a href="/committee/tennessee">tennessee</a>
-            <a href="/committee/republican">Republican National Committee</a>
-            <a href="/committee/democratic">Democratic National Committee</a>
-
-
-
-            <a href="/committee/united-states/member/troverman">troverman</A>
-
+            <div>
+                <a href="/committee/united-states">united states</a>
+                <a href="/committee/tennessee">tennessee</a>
+                <a href="/committee/republican">Republican National Committee</a>
+                <a href="/committee/democratic">Democratic National Committee</a>
+                <a href="/committee/united-states/member/troverman">troverman</a>
+            </div>
         </div>
 
-        <p>numbers and stats infographic</p>
-        <p>local counties / self governing committees / total members / search / political info</p>
-
+        <div style="height:500px;background-color:#f1f0ed;text-align:center">
+            <p>numbers and stats infographic</p>
+            <p>local counties / self governing committees / total members / search / political info</p>
+        </div>
 
     </div>
     <!--/if not logged in-->
