--- a/.tmp/public/src/app/committee/index.tpl.html
+++ b/.tmp/public/src/app/committee/index.tpl.html
@@ -1,3 +1,4 @@
+<div ui-view="committee">
 <div id="sidebar-wrapper">
   <ul class="sidebar-nav">
     <br>
@@ -83,5 +84,5 @@
     <br><br>
   </div>
 
- 
+</div>
 </div>
