--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -1,9 +1,8 @@
-<div class="surface-container home-pad">
-
-
+<div ui-view="search">
 	<div>
-		<p>search result</p>
-	
+		SEARCH
+		<div ng-repeat="searchResult in searchResults">
+			<h2><a href="/committee/{{searchResult.urlTitle}}">{{searchResult.title}}</a></h2>
+		</div>
 	</div>
-
 </div>
