--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -63,6 +63,7 @@
     <script src="/src/common/models/committee.js"></script>
     <script src="/src/common/models/index.js"></script>
     <script src="/src/common/models/post.js"></script>
+    <script src="/src/common/models/search.js"></script>
     <script src="/src/common/models/user.js"></script>
     <script src="/src/common/services/config.js"></script>
     <script src="/src/common/services/index.js"></script>
