--- a/.tmp/public/src/app/committee/index.tpl.html
+++ b/.tmp/public/src/app/committee/index.tpl.html
@@ -35,11 +35,10 @@
 
   <div ng-show="currentUser">
     <br>
-    <a>edit committee</a>
+    <button class="btn btn-primary">edit committee</button>
     <br>
-    <a>delete committee</a>
     <br>
-    <a>submit bill</a>
+    <button class="btn btn-primary">+ bill</button>
     <br>
     <div style="margin-left:20%;margin-right:20%;">
       <form class="committee-input" role="form" ng-submit="createBill(newBill)">
@@ -53,33 +52,24 @@
   </div>
 
 
-  <!--
-  <div ng-repeat="bill in bills1">
-    <h3><a href="{{bill.urls.congress}}">{{bill.official_title}}</a></h3>
-  </div>
-  -->
-
-
-
-
   <div class="bill-list-container">
     <br><br>
     <div class="bill-container" ng-repeat="bill in bills | orderBy:'-createdAt'">
-      <div>
+
+      <!--<div>
         <i class="fa fa-arrow-circle-up fa-2x"></i>
         <br>
         <i class="fa fa-arrow-circle-down fa-2x"></i>
-      </div>
-
+      </div>-->
       <div>
-        <h1 class="title">
-          <a href="/billl/{{bill.title}}">{{bill.title}}</a>
-        </h1>
+        <h3>
+          <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a>
+        </h3>
       </div>
-
       <div>
         <a href="/bill/{{bill.title}}">comment</a>
       </div>
+
     </div>
     <br><br>
   </div>
