--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -4,7 +4,7 @@
     <form class="committee-input" role="form" ng-submit="createCommittee(newCommittee)">
       <div class="form-group">
         <input type="text" placeholder= "committee title" ng-model="newCommittee.title" class="form-control" id="postTitle">
-        <input type="text" placeholder= "committee url" ng-model="newCommittee.url_title" class="form-control" id="postTitle">
+        <input type="text" placeholder= "committee url" ng-model="newCommittee.urlTitle" class="form-control" id="postTitle">
         <input type="text" placeholder= "committee parent" ng-model="newCommittee.parent" class="form-control" id="postTitle">
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
