--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -1,6 +1,16 @@
 <div ui-view="search">
 	<div>
-		SEARCH
+		<div>
+			<h1>{{searchQuery}}</h1>
+		</div>
+
+		<!--<input ng-keyup="keyPress(searchValue)" ng-model="searchValue">
+		<div ng-repeat="searchResult in searchResults">
+			<a href="/project/{{searchResult.urlTitle}}">{{searchResult.title}}</a>
+		</div>
+		<div style="height:100px"></div>-->
+
+
 		<div ng-repeat="searchResult in searchResults">
 			<h2><a href="/committee/{{searchResult.urlTitle}}">{{searchResult.title}}</a></h2>
 		</div>
