--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,6 +60,7 @@
     <script src="/src/app/register/index.js"></script>
     <script src="/src/app/search/index.js"></script>
     <script src="/src/common/models/bill.js"></script>
+    <script src="/src/common/models/comment.js"></script>
     <script src="/src/common/models/committee.js"></script>
     <script src="/src/common/models/index.js"></script>
     <script src="/src/common/models/post.js"></script>
