--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,10 +13,10 @@
         <link rel="stylesheet" href="/styles/css/bootstrap.css">
         <link rel="stylesheet" href="/styles/css/committee.css">
         <link rel="stylesheet" href="/styles/css/committees.css">
-        <link rel="stylesheet" href="/styles/css/contact.css">
         <link rel="stylesheet" href="/styles/css/font-awesome.min.css">
         <link rel="stylesheet" href="/styles/css/home.css">
         <link rel="stylesheet" href="/styles/css/intro.css">
+        <link rel="stylesheet" href="/styles/css/member.css">
         <link rel="stylesheet" href="/styles/css/portfolio.css">
         <link rel="stylesheet" href="/styles/css/responsive.css">
         <link rel="stylesheet" href="/styles/css/sidebar.css">
@@ -46,6 +46,7 @@
     <script src="/bower_components/angular-moment/angular-moment.js"></script>
     <script src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <script src="/bower_components/angular-scroll/angular-scroll.js"></script>
+    <script src="/bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
     <script src="/src/app/about/index.js"></script>
     <script src="/src/app/account/index.js"></script>
     <script src="/src/app/app.js"></script>
@@ -66,6 +67,7 @@
     <script src="/src/common/models/post.js"></script>
     <script src="/src/common/models/search.js"></script>
     <script src="/src/common/models/user.js"></script>
+    <script src="/src/common/models/vote.js"></script>
     <script src="/src/common/services/config.js"></script>
     <script src="/src/common/services/index.js"></script>
     <script src="/src/common/services/lodash.js"></script>
