--- a/.tmp/public/styles/css/home.css
+++ b/.tmp/public/styles/css/home.css
@@ -698,3 +698,80 @@ input:focus {
 	    font-size: 35px;
 	}
 }
+
+
+
+
+
+
+
+.img-fill {
+	width: 100%;
+	display: block;
+	overflow: hidden;
+	position: relative;
+	text-align: center
+}
+
+.img-fill img {
+	height: 100%;
+	min-width: 100%;
+	position: relative;
+	display: inline-block;
+	max-width: none
+}
+
+.heading-container{
+	position:relative;
+}
+
+.heading-container .img-fill {
+	height: 100vh;
+	background:#000;
+}
+
+.heading-container .img-fill:before {
+	content: '';
+	display: block;
+	width:100%;
+	height:100%;
+	top:0px;
+	left:0px;
+	z-index:2;
+	background:rgba(0,0,0,.50);
+	position: absolute;
+}
+
+.heading-container .img-fill img{
+	-webkit-filter: blur(3px);
+}
+
+.heading-container .img-fill .info {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	z-index:3;
+	top:30%;
+	padding:0 20px;
+}
+
+.heading-container .img-fill h3{
+	font-family:Jura;
+	color:#FFF;
+	margin:auto;
+	white-space:nowrap;
+	//text-align:center;
+	text-overflow:ellipsis;
+	overflow:hidden;
+}
+
+.heading-container .img-fill p{
+	max-width:650px;
+	//margin:auto;
+	margin-top:15px;
+	font-family:Jura;
+	color:#FFF;
+	text-align:justify;
+	overflow:hidden;
+}
