--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -12,13 +12,15 @@
   </div>
 </div>
 <!--/if logged in-->
-
-<div class="committee-list-container">
-  <br><br>
-  <div class="committee-container" ng-repeat="committee in committees | orderBy:'-createdAt'">
-    <h1 class="title"><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h1>
+<div class="product-list-container" id="committeeScrolling" style="height:100%;width:100%;overflow-y:auto;position:absolute">
+  <div class="committee-list-container" infinite-scroll='loadMore()' infinite-scroll-container="'#committeeScrolling'" infinite-scroll-distance='2' infinite-scroll-parent>
+      <br><br>
+      <div class="committee-container" ng-repeat="committee in committees | orderBy:'-createdAt'">
+        <h1 class="title"><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h1>
+      </div>
+      <br><br>
+    </div>
   </div>
-  <br><br>
 </div>
 
 
