--- a/.tmp/public/src/app/header/index.tpl.html
+++ b/.tmp/public/src/app/header/index.tpl.html
@@ -28,9 +28,10 @@
               </div>
             </form>
 
-            
-            <li><a href="/register">register</a></li>
-            <li><a href="/login">login</a></li>
+            <li ng-show="currentUser"><a href="/account">account</a></li>
+            <li ng-show="currentUser"><a href="/logout">signout</a></li>
+            <li ng-show="!currentUser"><a href="/register">register</a></li>
+            <li ng-show="!currentUser"><a href="/login">login</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
