--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -1,187 +1,2 @@
-<!--login-->
-<!--<div class="row">
-    <div class="col-md-6">
-        <h3>Login</h3>
-        <form class="form-horizontal" role="form" action="/auth/local" method="post">
-            <div class="form-group">
-                <label for="inputUsername3" class="col-sm-2 control-label">Username</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputUsername3" name="identifier" placeholder="Username">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" name="password" placeholder="Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Sign in</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>-->
-
-<style>
-input {
-  outline: none;
-}
-
-#wrapper {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-}
-
-#box {
-  width: 345px;
-  height: 450px;
-  background-color: #fff;
-  margin: 0 auto;
-  -webkit-border-radius: 4px;
-  -o-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 3px;
-}
-
-#top_header {
-  width: 100%;
-  margin: 0;
-  padding-top: 45px;
-}
-
-#top_header > h3 {
-  text-align: center;
-  font-family: 'Lato', sans-serif;
-  font-size: 32px;
-  font-weight: 800;
-  color: #378DE5;
-  -webkit-text-stroke: 0.5px;
-  margin: 0;
-
-}
-
-#top_header > h5 {
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-  font-weight: 300;
-  color: #378DE5;
-  line-height: 1.6;
-  margin: 0;
-  padding: 15px 0;
-  color: #555;
-  -webkit-text-stroke: 0.2px;
-}
-
-#inputs {
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  position: relative;
-}
-
-input[type=text], input[type=password], input[type=submit] {
-  width: 300px;
-  height: 55px;
-  position: relative;
-  margin: 0 auto;
-  display: block;
-  margin-bottom: -10px;
-  padding: 15px;
-  box-sizing: border-box;
-  -webkit-text-stroke: 0.1px;
-}
-
-input[type=text], input[type=password] {
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-size:16px; 
-  border: thin solid #ccc;
-  border-radius: 5px;
-  color: #378DE5;
-}
-
-input[type=text]:focus, input[type=password]:focus {
-  border: thin solid #378DE5;
-  -webkit-transition: all .4s ease;
-  -moz-transition: all .4s ease;
-  -o-transition: all .4s ease;
-  transition: all .4s ease;
-}
-
-input[type=text]:focus, input[type=password]:focus {
-  border-left: thin solid #378DE5;
-}
-
-
-input[type=submit] {
-  color: #378DE5;
-  background-color: #fff;
-  border: 1px solid #378DE5;
-  border-radius: 5px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  transition: all .3s ease;
-  margin-top: 0px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #378DE5;
-  color: #fff;
-}
-
-#bottom {
-  width: 300px;
-  margin: 0 auto;
-  margin-top: 15px;
-}
-
-a {
-  text-decoration: none;
-  color: #282828;
-  font-size: 13px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  transition: color .3s ease;
-  outline: none;
-}
-
-a:hover {
-  color: #1eb056;
-}
-
-.right_a {
-  float: right;
-}
-</style>
-<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Gafata|Nobile:400,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
-
-<div id="wrapper">
-    <div id="box">
-        <div id="top_header">
-            <h3>Login</h3>
-        </div>
-    
-        <div id="inputs">
-            <form id='login' action="/auth/local" method="post">
-                <input type='text' name='identifier' id='username' value='' maxlength="50" size="30" placeholder="Username">
-                <br>
-                <input type='password' name='password' id='password' maxlength="50" size="30" placeholder="Password">
-                <br>
-                <input type='submit' name='Submit' value='Login'>
-            </form>
-
-            <div id="bottom">
-              <a href="/register">Create an account</a>
-              <a class="right_a" href="#">Forgot password</a>
-            </div>
-        </div>
-    </div>
-</div>
+<h1>account</h1>
+{{currentUser}}
