--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -15,7 +15,7 @@
 
 		<p class="lead">{{bill.billContent}}</p>
 
-		{{voteSum}}
+		{{bill.voteCount}}
 		<button class="btn btn-default" ng-click="createVote(1)"><i class="fa fa-caret-up"></i></button>
 		<button class="btn btn-default" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i></button>
 
