--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -39,7 +39,7 @@
     </svg>-->
 
     <video id="video" autoplay="autoplay" muted="muted" preload="auto" loop="loop">
-        <source src="/videos/voting.mp4" type="video/webm">
+        <source src="/videos/washington.mp4" type="video/webm">
     </video>
     <!--<img src="/images/capitol.jpg">-->
 </div>
