--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -113,8 +113,10 @@
 
 		<p>real time voting</p>
 		<p>bylaw generation</p>
-		<p>a political social network
+		<p>a political social network</p>
 		<p>have your voice be heard through collective decision making</p>
+
+    <p>select others to represent your vote at any time</p>
 
 		<p>we believe in a free and open internet</p>
 		<p>we believe in direct democracy</p>
