--- a/.tmp/public/src/app/member/index.tpl.html
+++ b/.tmp/public/src/app/member/index.tpl.html
@@ -2,18 +2,22 @@
 	<div class="content-profile-page">
 	  <div class="profile-user-page card">
 	    <div class="img-user-profile">
-	      <img class="profile-bgHome" src="/images/crowd1.jpg" />
+	      <div style="height:16em;width: 100%;overflow: hidden;">
+	      	<img class="profile-bgHome" src="/images/crowd1.jpg" />
+	      </div>
 	      <img class="avatar" src="/images/trevor.jpg"/>
 	    </div>
 	    <div class="user-profile-data">
 	      <h1>{{member.username}}</h1>
-	      <button class="btn">follow</button>
-
+	      <button class="btn">follow</button><br>
+	      <button class="btn">represent</button><br>
 	    </div>
 	    <ul class="data-user">
-	      <li><a><strong>{{votes.length}}</strong><span>Votes</span></a></li>
-	      <li><a><strong>{{followers.length}}</strong><span>Followers</span></a></li>
-	      <li><a><strong>{{following.length}}</strong><span>Following</span></a></li>
+	   		<li><a><strong>{{following.length}}</strong><span>Representing</span></a></li>
+	    	<li><a><strong>{{votes.length}}</strong><span>Votes</span></a></li>
+	   		<li><a><strong>{{votes.length}}</strong><span>Committees</span></a></li>
+	    	<li><a><strong>{{followers.length}}</strong><span>Followers</span></a></li>
+	    	<li><a><strong>{{following.length}}</strong><span>Following</span></a></li>
 	    </ul>
 	  </div>
 	</div>
