--- a/.tmp/public/styles/css/member.css
+++ b/.tmp/public/styles/css/member.css
@@ -20,7 +20,8 @@
 .profile-user-page .img-user-profile .profile-bgHome {
   border-bottom: .2em solid #f5f5f5;
   width: 100%;
-  height: 16em;
+  margin-top:-40%;
+  //height: 16em;
 }
 
 .profile-user-page .img-user-profile .avatar {
@@ -73,7 +74,7 @@
 .profile-user-page .data-user li {
   margin: 0;
   padding: 0;
-  width: 33.33334%;
+  width: 20%;
   display: table-cell;
   text-align: center;
   border-left: 0.1em solid transparent;
