--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -16,6 +16,11 @@
 		<p class="lead">{{bill.billContent}}</p>
 
 		{{bill.voteCount}}
+
+		<div ng-repeat="vote in votes">
+			<a href="/member/{{vote.user.username}}">{{vote.user.username}}</a>
+
+		</div>
 		<button class="btn btn-default" ng-click="createVote(1)"><i class="fa fa-caret-up"></i></button>
 		<button class="btn btn-default" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i></button>
 
