--- a/.tmp/public/src/app/committees/index.tpl.html
+++ b/.tmp/public/src/app/committees/index.tpl.html
@@ -1,6 +1,6 @@
 <!--if logged in-->
 <div ng-show="currentUser">
-  <div style="margin-left:20%;margin-right:20%;">
+  <div style="margin-left:20%;margin-right:20%;margin-top:5%">
     <form class="committee-input" role="form" ng-submit="createCommittee(newCommittee)">
       <div class="form-group">
         <input type="text" placeholder= "committee title" ng-model="newCommittee.title" class="form-control" id="postTitle">
@@ -12,16 +12,14 @@
   </div>
 </div>
 <!--/if logged in-->
-<!--<div class="product-list-container" id="committeeScrolling" style="height:50%;width:100%;overflow-y:auto;position:absolute">
-  <div class="committee-list-container" infinite-scroll='loadMore()' infinite-scroll-container="'#committeeScrolling'" infinite-scroll-distance='1' infinite-scroll-parent>-->
-      <br><br>
+<div class="committee-list-parent-container" id="committeeScrolling">
+  <div class="committee-list-container" infinite-scroll='loadMore()' infinite-scroll-container="'#committeeScrolling'" infinite-scroll-distance='1' infinite-scroll-parent>
       <div class="committee-container" ng-repeat="committee in committees">
-        <h1 class="title"><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h1>
+        <h4 class="committees title"><a href="/committee/{{committee.urlTitle}}">{{committee.title}}</a></h4>
       </div>
-      <br><br>
     </div>
-  <!--</div>
-</div>-->
+  </div>
+</div>
 
 
 <div style="height:100px;"></div>
