--- a/.tmp/public/styles/css/committees.css
+++ b/.tmp/public/styles/css/committees.css
@@ -1,4 +1,9 @@
 .committee-list-container{
     margin-left:20%;
     margin-right:20%;
+    margin-top:5%;
+}
+.committees.title{
+	font-size:35px;
+	margin-top:25px;
 }
