--- a/assets/src/app/committee/index.tpl.html
+++ b/assets/src/app/committee/index.tpl.html
@@ -2,36 +2,21 @@
   <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <br>
-      <li>
-          <a href="/">{{committee.title}}</a>
-      </li>
+      <li><a style="font-weight:bold" href="/">{{committee.title}}</a></li>
       <hr>
-      <li>
-          <a href="#">bylaws</a>
-      </li>
-      <li>
-          <a href="committee/{{committee.urlTitle}}/committees">committees</a>
-      </li>
-      <li>
-          <a href="committee/{{committee.urlTitle}}/bills">bills</a>
-      </li>
-      <li>
-          <a href="committee/{{committee.urlTitle}}/discussion">discussion</a>
-      </li>
-      <li>
-          <a href="#">elections</a>
-      </li>
-      <li>
-          <a href="committee/{{committee.urlTitle}}/polls">polls</a>
-      </li>
-      <li>
-          <a href="committee/{{committee.urlTitle}}/members">members</a>
-      </li>
+      <li><a href="committee/{{committee.urlTitle}}">bylaws</a></li>
+      <li><a href="committee/{{committee.urlTitle}}/committees">committees</a></li>
+      <li><a href="committee/{{committee.urlTitle}}/bills">bills</a></li>
+      <li><a href="committee/{{committee.urlTitle}}">discussion</a></li>
+      <li><a href="committee/{{committee.urlTitle}}">elections</a></li>
+      <li><a href="committee/{{committee.urlTitle}}">polls</a></li>
+      <li><a href="committee/{{committee.urlTitle}}/members">members</a></li>
     </ul>
   </div>
   <div id="main-container">
-    <h1>{{committee.title}}</h1>
-
+    <div class="committee-title">
+      <h1>{{committee.title}}</h1>
+    </div>
     <div ng-show="currentUser">
       <br>
       <button class="btn btn-primary">edit committee</button>
@@ -50,25 +35,24 @@
       </div>
     </div>
 
-
     <div class="bill-list-container">
-      <br><br>
       <div class="bill-container" ng-repeat="bill in bills | orderBy:'-voteCount'">
-
-        <div>
-          <h3>
-            {{bill.voteCount}}
-            <button ng-click="createVote(1, bill)">upvote</button>
-            <button ng-click="createVote(-1, bill)">downvote</button>
-            <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a>
-          </h3>
+        <div class="bill-item">
+          <div>
+            <h4>
+              {{bill.voteCount}}
+              <button class="btn btn-default" ng-click="createVote(1, bill)">upvote</button>
+              <button class="btn btn-default" ng-click="createVote(-1, bill)">downvote</button>
+              <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a>
+            </h4>
+          </div>
+          <div>
+            <a href="/bill/{{bill.id}}/{{bill.title}}">comment</a>
+          </div>
+          <br>
         </div>
-        <div>
-          <a href="/bill/{{bill.id}}/{{bill.title}}">comment</a>
-        </div>
-
       </div>
-      <br><br>
     </div>
   </div>
 </div>
+<!--<div ui-view="members"></div>-->
