--- a/assets/src/app/committee/members.html
+++ b/assets/src/app/committee/members.html
@@ -1,34 +1,19 @@
 <div id="sidebar-wrapper">
-  <ul class="sidebar-nav">
+    <ul class="sidebar-nav">
     <br>
-    <li>
-        <a href="/">{{committee.title}}</a>
-    </li>
+    <li><a href="/">{{committee.title}}</a></li>
     <hr>
-    <li>
-        <a href="#">bylaws</a>
+    <li><a href="#">bylaws</a></li>
+    <li><a href="#">committees</a></li>
+    <li><a href="#">bills</a></li>
+    <li><a href="#">discussion</a></li>
+    <li><a href="#">elections</a></li>
+    <li><a href="#">polls</a></li>
+    <li><a href="committee/members">members</a>
     </li>
-    <li>
-        <a href="#">committees</a>
-    </li>
-    <li>
-        <a href="#">bills</a>
-    </li>
-    <li>
-        <a href="#">discussion</a>
-    </li>
-    <li>
-        <a href="#">elections</a>
-    </li>
-    <li>
-        <a href="#">polls</a>
-    </li>
-    <li>
-        <a href="committee/members">members</a>
-    </li>
-  </ul>
+    </ul>
 </div>
 
 <div id="main-container">
- members
+    members
 </div>
