--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -1,5 +1,5 @@
 <div class="intro-container">
-    <!--<svg class="intro" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080" width="1920px" height="1080px" preserveAspectRatio="xMidYMid slice">
+    <svg class="intro" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080" width="1920px" height="1080px" preserveAspectRatio="xMidYMid slice">
         <defs>
             <mask class="intro-mask" id="intro-mask" x="0" y="0" width="100%" height="100%">
                 <rect class="intro-rect" x="0" y="0" width="1920px" height="1080px"></rect>
@@ -36,7 +36,7 @@
                 </g>
             </svg>
         </a>
-    </svg>-->
+    </svg>
 
     <video id="video" autoplay="autoplay" muted="muted" preload="auto" loop="loop">
         <source src="/videos/washington.mp4" type="video/webm">
