--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -24,7 +24,7 @@
 
     <div id="home-content">
 
-        <div style="height:500px;background-color:#white;text-align:center">
+        <div style="height:500px;background-color:white;text-align:center">
             <div style="height:88px;"></div>
             <i style="font-size:256px;" class="fa fa-bullhorn"></i>
             <p>the internet's voice</p>
