--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -69,6 +69,7 @@
     <script src="/src/app/account/index.js"></script>
     <script src="/src/app/app.js"></script>
     <script src="/src/app/bill/index.js"></script>
+    <script src="/src/app/bills/index.js"></script>
     <script src="/src/app/committee/index.js"></script>
     <script src="/src/app/committees/index.js"></script>
     <script src="/src/app/header/index.js"></script>
