--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -47,9 +47,11 @@
             </div>
 
         </div>
-        <div style="height:500px;background-color:#fff;text-align:center">
+        <div style="height:500px;background-color:#D8D8D8;text-align:center">
           <div ng-include="'register/index.tpl.html'"></div>
         </div>
+
+      
         <div style="max-height:500px;overflow:scroll;background-color:#f1f0ed;text-align:center">
             <p>numbers and stats infographic</p>
             <p>local counties / self governing committees / total members / search / political info</p>
