--- a/assets/src/app/register/index.tpl.html
+++ b/assets/src/app/register/index.tpl.html
@@ -1,6 +1,8 @@
 <!--register-->
+        <div class="register-form">
+
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 col-md-offset-3">
         <h3>Create an Account</h3>
         <form class="form-horizontal" role="form" action="/auth/local/register" method="post">
             <div class="form-group">
@@ -37,3 +39,5 @@
 </div>
 
 <a href="/login">already have an account?</a>
+
+</div>
