--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -33,7 +33,7 @@
             <div style="height:88px;"></div>
         </div>
 
-        <div style="max-height:500px;background-color:#fff;text-align:center;overflow:scroll">
+        <div style="background-color:#fff;text-align:center;">
             <h1>trending</h1>
             <p>{{billCount}} bills</p>
             <div ng-repeat="bill in bills">
