--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -52,7 +52,7 @@
         </div>
 
       
-        <div style="max-height:500px;overflow:scroll;background-color:#f1f0ed;text-align:center">
+        <div style="background-color:#f1f0ed;text-align:center">
             <p>numbers and stats infographic</p>
             <p>local counties / self governing committees / total members / search / political info</p>
 
